tests all working, but there are valid filures in cucumber tests